@@ -1,7 +1,4 @@
 
-/* arch specific */
-#include "arch-@CONFIG_SYSDEP_DIR@.conf"
-
 /* miscelaneous functions */
 #include "misc.conf"
 
