@@ -1,3 +1,0 @@
-
-/* /usr/include/bits/syscall.h */
-#include "syscall.conf"
