@@ -1,3 +1,6 @@
+2010-04-29  Jiri Olsa <olsajiri@gmail.com>
+	* refactoring sysdep configuration
+
 -------------------------------------------------------------------------------
 latrace 0.5.8
 
